<resources>
    <string name="app_name">Skelta</string>
    <string name="welcome">Welcome</string>
    <string name="check_product">QR Scan Product</string>
    <string name="or">OR</string>
    <string name="product_code">Product Code</string>
    <string name="check">Get Started</string>
    <string name="loading">Loading...</string>
    <string name="input_password">Input Password</string>
    <string name="create_password">Create Password</string>
    <string name="submit">Submit</string>
    <string name="enter_product_code">Enter product code</string>
    <string name="can_t_scan">Can\'t Scan? Enter product code here</string>
    <string name="not_connected_to_internet">Not Connected to Internet</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="existing_user_login_here">Existing user? <u>Login here</u></string>
    <string name="new_user_signup_here">Register</string>
    <string name="user_info">User Info</string>
    <string name="save">Save</string>
    <string name="door_unlocked">Door  Locked</string>
    <string name="door_locked">Door  Unlocked</string>
    <string name="delete_device">Remove Device</string>
    <string name="Tag2">Your device data will get erased .</string>
    <string name="configure_device">Device Settings</string>
    <string name="door_info">Door Info</string>
    <string name="door_name">Door Name</string>
    <string name="network_settings">Network Settings</string>
    <string name="ssid">SSID</string>
    <string name="network_ip">Network IP</string>
    <string name="hardware_reset">Hardware Reset</string>
    <string name="change_credentials">Change Credentials</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Remove</string>
    <string name="refresh">Refresh</string>
    <string name="details">User Info</string>
    <string name="username">Username</string>
    <string name="none">-</string>
    <string name="email_id">Email Id</string>
    <string name="mob_no">Mob No.</string>
    <string name="devices_list">Device List</string>
    <string name="device_name">Device name :</string>
    <string name="device_code">Device code :</string>
    <string name="change_pattern">Change pattern</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="tag">Didn\'t receive otp? Regenerate here</string>
    <string name="regenerate">Regenerate</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="send_reset_password_link">Send Reset Password Link</string>
    <string name="on_timeO">n Time</string>
    <string name="on_time">On Time</string>
    <string name="off_time">Off Time</string>
</resources>