<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.radionix.doorlock.home.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg1"
        >

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scanner_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_300sdp"
            app:autoFocusButtonColor="@android:color/white"
            app:autoFocusButtonVisible="true"
            app:flashButtonColor="@android:color/white"
            app:flashButtonVisible="true"
            app:frameColor="@color/ap_color"
            app:frameCornersSize="@dimen/_50sdp"
            app:frameCornersRadius="@dimen/_5sdp"
            app:frameAspectRatioWidth="1"
            app:frameAspectRatioHeight="1"
            app:frameSize="0.75"
            app:frameThickness="2dp"
            app:maskColor="#77000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/can_t_scan"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:textColor="@color/editText"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/scanner_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@={viewModel.productCode}"
            android:inputType="text"
            android:fontFamily="@font/alata"
            android:paddingStart="@dimen/_15sdp"
            android:background="@drawable/bgnew_editext"
            android:hint="@string/enter_product_code"
            android:singleLine="true"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/alata"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/enterQr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_button"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:visibility="gone"
            android:indeterminateTint="@color/ap_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterQr"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>