<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product.DeviceSettingsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@color/ap_color"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/ic_wave_otp"
            app:layout_constraintTop_toBottomOf="@id/top_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/configure_device"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_8sdp"
                    android:text="@string/door_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@color/secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/door_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/view2" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tank_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:text="Door Lock"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tank_name" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tank_density"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="Door Status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tank_value" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/density_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    tools:text="Unlocked"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tank_density" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/network_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/network_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_globe_grid"
                    android:drawablePadding="@dimen/_8sdp"
                    android:text="@string/network_settings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@color/secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/network_info" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ssid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/ssid"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/view3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/black"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ssid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    tools:text="aravind"
                    android:gravity="end"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintStart_toEndOf="@id/ssid_label"
                    app:layout_constraintTop_toTopOf="@id/ssid_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/network_ip"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/ssid"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/black"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    tools:text="192.15.4.1"
                    app:layout_constraintTop_toTopOf="@id/ip_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/reset_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:background="@android:color/transparent"
                    android:text="@string/hardware_reset"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ip" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_reset"
                    app:layout_constraintBottom_toBottomOf="@id/reset_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/reset_label" />

                <ProgressBar
                    android:id="@+id/spin_kit"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:indeterminateTint="@color/ap_color"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="@id/reset_label"
                    app:layout_constraintBottom_toBottomOf="@id/reset_label"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/check_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@android:color/transparent"
                    android:text="@string/change_credentials"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reset_label"

                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/network_credentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:src="@drawable/ic_wifi_router"
                    app:layout_constraintBottom_toBottomOf="@id/check_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/check_label" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/network_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
